UI changes(Spacing Issue)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,12 +26,24 @@ body {
   font-size: 14px;
 }
 
- .css-hdnqye-MuiGrid-root {
-  padding: 0px;
-}
 .css-19ergew-MuiGrid-root {
   padding: 0px;
-} 
+}
+
+.css-hdnqye-MuiGrid-root {
+  padding: 0px;
+}
+
+.css-73imaa {
+  padding: 0px;
+}
+
+.css-pc7201{
+  padding: 0px;
+}
+
+
+
 
 .css-j204z7-MuiFormControlLabel-root.Mui-disabled {
   margin-top: 5px;
